
syntax = "proto3";

option java_multiple_files = true;
option java_package = "asyncapi.glee";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package asyncapi.glee;

// The greeting service definition.
service Glee {
  
rpc SayGleeRegisterFunction (RegisterFunctionRequest) returns () {}
    
rpc SayGleeTriggerFunction (TriggerFunctionRequest) returns () {}
    
rpc SayGleeTriggerLifecycle (TriggerLifecycleHookRequest) returns () {}
    
rpc SayGleeRegisterLifecycle (RegisterLifecycleHookRequest) returns () {}
    
}

import "google/protobuf/any.proto";


message RegisterFunctionRequest {
  
    string content = 1;
        
}      
      
message TriggerFunctionRequest {
  
    google.protobuf.Any event = 1;
        
}      
      
message TriggerLifecycleHookRequest {
  
    string serverName = 1;
        

    google.protobuf.Any server = 2;
        

    google.protobuf.Any connection = 3;
        

    google.protobuf.Any glee = 4;
        
}      
      
message RegisterLifecycleHookRequest {
  
    string content = 1;
        
}      
      

